kubeflow/apps/tensorboard/build/v1_service_tensorboard-controller-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|system|controller-manager-metrics-service'
  labels:
    app: tensorboard-controller
    control-plane: controller-manager
    kustomize.component: tensorboard-controller
  name: tensorboard-controller-controller-manager-metrics-service
  namespace: kubeflow
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: tensorboard-controller
    control-plane: controller-manager
    kustomize.component: tensorboard-controller
