kubeflow/apps/tensorboard/build/networking.istio.io_v1alpha3_destinationrule_tensorboards-web-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.istio.io|DestinationRule|default|tensorboards-web-app
  labels:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
  name: tensorboards-web-app
  namespace: kubeflow
spec:
  host: tensorboards-web-app-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
